feat: upgrade target framework for cli to .NET 8.0 (#624)
* feat: upgrade target framework to .NET 8.0

* refactor: fix obsolete warnings

* chore: update AutoMapper package to version 13.0.1

* chore: suppress warnings

* feat: upgrade Docker images to .NET 8.0

--- a/BililiveRecorder.Cli/BililiveRecorder.Cli.csproj
+++ b/BililiveRecorder.Cli/BililiveRecorder.Cli.csproj
@@ -2,11 +2,11 @@
   
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <StartupObject>BililiveRecorder.Cli.Program</StartupObject>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
-    <RuntimeIdentifiers>win-x64;osx-x64;osx.10.11-x64;linux-arm64;linux-arm;linux-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;osx-x64;osx-arm64;linux-arm64;linux-arm;linux-x64</RuntimeIdentifiers>
     <RuntimeIdentifier Condition=" '$(RuntimeIdentifier)' == 'any' "></RuntimeIdentifier>
     <UseAppHost Condition=" '$(RuntimeIdentifier)' == '' and '$(Configuration)' != 'Debug' ">false</UseAppHost>
     <PublishDir Condition=" '$(RuntimeIdentifier)' == '' ">publish\any\$(Configuration)</PublishDir>
